update all changes

--- a/index.html
+++ b/index.html
@@ -6,38 +6,41 @@
     <title>my first webpage</title>
 </head>
 <body>
-    <h2>Resume</h2>
-    <h3>Navyasri Aripineni</h3>
-    <h4>aripineninavya@gmail.com</h4>
-    <h4>Ph.no-0763478772</h4>
-    <h4>Docentgatan 6B, Lgh 1103, Malmö 21552, </h4>
-    <h5>EDUCATION</h5>
-    <p>Bachelor’s Degree (B.Tech) - Electronics & Communication Engineering at Jawaharlal Nehru Technological University, India 
-| 2010-2014. 
-         UI/UX design with Tecvinson academy | 2024 Nov-2025 may.
-    </p>
+    <h1 style="color: red; text-align: center">Resume</h2>
+    <h3 style="color: orange;">Navyasri Aripineni</h3>
+    <h4 style="color: orange;">aripineninavya@gmail.com</h4>
+    <h4 style="color: orange;">Ph.no-0763478772</h4>
+    <h4 style="color: orange;">Docentgatan 6B, Lgh 1103, Malmö 21552, </h4>
+    <h2 style="color: blue;">EDUCATION</h2>
+    <p>Bachelor’s Degree (B.Tech) - Electronics & Communication Engineering at Jawaharlal Nehru Technological University, India | 2010-2014. </p>
+    <p></p>UI/UX design with Tecvinson academy | 2024 Nov-2025 may.</p>
     <div>
-        <h5>WORK EXPERIENCE</h5>
-    <p> Worked as preschool Teacher in Cheer Buddies Kindergarten, Bengaluru, India | 2020- 2021. Worked as  Primary School Teacher in Little Ville School, Bengaluru, India | 2021-2022    </p>
+        <h2 style="color: blue;">WORK EXPERIENCE</h2>
+        <p> Worked as preschool Teacher in Cheer Buddies Kindergarten, Bengaluru, India | 2020- 2021. </p>
+        <p>Worked as  Primary School Teacher in Little Ville School, Bengaluru, India | 2021-2022   </p>
     </div>
     <div>
-        <h5> Current Situation</h5>
-        <p> Studying Front-end course. 
-            working part time in mcdonalds. 
-            Actively looking for a new job in Sweden
-        </p>
+        <h2 style="color: blue;"> Current Situation</h2>
+        <p> Studying Front-end course. </p>
+        <p> Working part time in mcdonalds. </p>
+        <p> Actively looking for a new job in Sweden </p>
     </div>
     <div>
-        <h5>Skills</h5>
-        <p>
-            Creativity & Innovation.
-             Teamwork & Collaboration.
-             Time Management.
-             Communication & Interpersonal Skills.
-             Classroom Management.
-             Adaptability & Flexibility.
-              aProblem-Solving.
-        </p>
+        <h2 style="color: blue;">Skills</h2>
+        <p>Creativity & Innovation.</p>
+        <p>Teamwork & Collaboration.</p>
+        <p>Time Management.</p>
+        <p>Communication & Interpersonal Skills.</p>
+        <p>Classroom Management.</p>
+        <p>Adaptability & Flexibility.</p>
+        <p>Problem-Solving.</p>
+    </div>
+    <div>
+        <h2 style="color: blue;">Hobbys</h2>
+        <P>paper crafts, drawing, browsing, cocking</P>
+        <p>spending time with kids</p>
+        <P>Organising house</P>
+        <P>Learning new things</P>
     </div>
 </body>
 </html>
